# unhook

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  pyproject.toml  test_script.ipynb  tox.ini  twitter_users.txt
.github/workflows/: gmail-kindle.yml  integration.yml  kindle.yml  test.yml  twitter-integration.yml
docs/: self_thread_research.md
src/unhook/: __init__.py  cmd.py  constants.py  email_content.py  epub_builder.py  epub_service.py  feed.py  gmail_epub_service.py  gmail_service.py  post_content.py  twitter_feed.py
src/unhook_tanha/: __init__.py  cmd.py  feed.py
tests/: __init__.py  conftest.py  test_cmd.py  test_constants.py  test_email_content.py  test_epub_builder.py  test_epub_service.py  test_feed.py  test_gmail_epub_service.py  test_gmail_service.py  test_newsletter_integration.py  test_post_content.py  test_twitter_feed.py
tests/fixtures/: ai_guide_newsletter.eml  waymo_newsletter.eml
