[project]
name = "unhook"
version = "0.0.0"
description = "Unhook"
authors = [{name = "Moritz Boos", email = "moritz.boos@gmail.com"}]
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "bleach>=6.1.0",
    "ebooklib>=0.18",
    "httpx>=0.27.0",
    "markdown2>=2.4.0",
    "typer>=0.12.0",
    "atproto>=0.0.55",
    "python-dotenv>=1.0.0",
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
    "ipykernel>=6.30.1",
    "pillow>=10.0.0",
]

[project.urls]
Repository = "https://github.com/unhook"

[dependency-groups]
dev = [
    "ruff>=0.6.0",
    "pre-commit>=3.6.0",
    "pre-commit-hooks>=4.5.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.23.0",
    "myst-parser>=2.0.0",
    "pytest-mock>=3.12.0",
    "tox>=4.0.0",
    "tox-uv>=1.0.0",
]


[project.scripts]
unhook = "unhook.cmd:app"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["unhook", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 90

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"scripts/*" = ["F401"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
